force-app/main/default/objects/Resource__c/fields/Available_For_Aureus_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Aureus_Lesson__c</fullName>
    <defaultValue>false</defaultValue>
    <description>store check list this resourse is  Available For  Aureus Lesson or not</description>
    <label>Available For  Aureus Lesson</label>
    <type>Checkbox</type>
</CustomField>