force-app/main/default/objects/Resource__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>