force-app/main/default/objects/Resource__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Package__c.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Center__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>