force-app/main/default/objects/Resource__c/fields/Studio_Id__c.field-meta.xml
<CustomField>
    <fullName>Studio_Id__c</fullName>
    <label>Studio Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>