force-app/main/default/objects/Resource__c/listViews/Studios_Available_for_Rent.listView-meta.xml
<ListView>
    <fullName>Studios_Available_for_Rent</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Package__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Studio_Id__c</columns>
    <columns>Capacity__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Studios Available for Rent</label>
</ListView>